--- a/default.env
+++ b/default.env
@@ -34,6 +34,7 @@ AWS_HOSTED_ZONE_ID=myzoneid
 GRAFANA_HOST=grafana
 PROM_HOST=prometheus
 PRYSM_HOST=prysm
+EE_HOST=ee
 EL_HOST=el
 EL_LB=el-lb
 EL_WS_HOST=elws
@@ -82,6 +83,10 @@ ERIGON_TORRENT_PORT=42069
 # SSV Node ports
 SSV_P2P_PORT=13001
 SSV_P2P_PORT_UDP=12001
+# Engine port. Only for distributed setups, this should otherwise be left alone
+EE_PORT=8551
+# Consensus layer REST port. Only for distributed setups, this should otherwise be left alone
+CL_REST_PORT=5052
 
 # Geth cache size. This matters for low-memory machines such as RasPi 4, where
 # you may want to set it to 256. Geth will use the default if this is left blank.
