--- a/erigon.yml
+++ b/erigon.yml
@@ -73,7 +73,7 @@ services:
       - --authrpc.addr
       - 0.0.0.0
       - --authrpc.port
-      - "8551"
+      - ${EE_PORT:-8551}
       - --authrpc.vhosts=*
       - --authrpc.jwtsecret
       - /var/lib/erigon/ee-secret/jwtsecret
