--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -119,18 +119,29 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: nimbus:merge
-    user: user
+    image: livepeerci/curl-jq
+    user: "10002"
     volumes:
       - nimbus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
+    depends_on:
+      - consensus
     entrypoint: ["/bin/sh","-c"]
     command:
       - |
-        for dir in /var/lib/nimbus/validators/*; do
-          echo $$(basename $${dir})
-        done
+        set -e
+        token=$$(cat /var/lib/nimbus/api-token.txt)
+        result=$$(curl -s -H "Accept: application/json" -H "Authorization: Bearer $$token" http://consensus:7500/eth/v1/keystores)
+        if ! echo $$result | grep -q "data"; then
+           echo "The key manager API query failed. Output:"
+           echo $$result
+        fi
+        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
+            echo "No keys loaded"
+        else
+          echo "Validator public keys"
+          echo $$result | jq -r '.data[].validating_pubkey'
+        fi
 volumes:
   nimbus-data:
   jwtsecret:
