--- a/teku-base.yml
+++ b/teku-base.yml
@@ -80,7 +80,7 @@ services:
     entrypoint: ["/bin/sh","-c"]
     command:
       - |
-        cat var/lib/teku/validator/key-manager/validator-api-bearer
+        cat /var/lib/teku/validator/key-manager/validator-api-bearer
         echo
   validator-import:
     profiles: ["tools"]
@@ -110,19 +110,29 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: teku:merge
-    user: teku
+    image: livepeerci/curl-jq
+    user: "10002"
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
+    depends_on:
+      - consensus
     entrypoint: ["/bin/sh","-c"]
     command:
       - |
-        for file in /var/lib/teku/validator-keys/*; do
-          echo -n "0x"
-          cat $${file} | jq -r .pubkey
-        done
+        set -e
+        token=$$(cat /var/lib/teku/validator/key-manager/validator-api-bearer)
+        result=$$(curl -k -s -H "Accept: application/json" -H "Authorization: Bearer $$token" https://consensus:7500/eth/v1/keystores)
+        if ! echo $$result | grep -q "data"; then
+           echo "The key manager API query failed. Output:"
+           echo $$result
+        fi
+        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
+            echo "No keys loaded"
+        else
+          echo "Validator public keys"
+          echo $$result | jq -r '.data[].validating_pubkey'
+        fi
 volumes:
   teku-data:
   jwtsecret:
