--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -41,6 +41,20 @@ services:
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
+  get-keyapi-token:
+    profiles: ["tools"]
+    restart: "no"
+    image: alpine:latest
+    user: "10002"
+    volumes:
+      - teku-data:/var/lib/teku
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat /var/lib/teku/validator/key-manager/validator-api-bearer
+        echo
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -69,18 +83,28 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: teku:merge
-    user: teku
+    image: livepeerci/curl-jq
+    user: "10002"
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
+    depends_on:
+      - validator
     entrypoint: ["/bin/sh","-c"]
     command:
       - |
-        for file in /var/lib/teku/validator-keys/*; do
-          echo -n "0x"
-          cat $${file} | jq -r .pubkey
-        done
+        set -e
+        token=$$(cat /var/lib/teku/validator/key-manager/validator-api-bearer)
+        result=$$(curl -k -s -H "Accept: application/json" -H "Authorization: Bearer $$token" https://validator:7500/eth/v1/keystores)
+        if ! echo $$result | grep -q "data"; then
+           echo "The key manager API query failed. Output:"
+           echo $$result
+        fi
+        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
+            echo "No keys loaded"
+        else
+          echo "Validator public keys"
+          echo $$result | jq -r '.data[].validating_pubkey'
+        fi
 volumes:
   teku-data:
