--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -13,7 +13,7 @@ RUN groupmod -g "${UID}" teku && usermod -u "${UID}" -g "${UID}" teku
 
 RUN set -eux; \
         apt-get update; \
-        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata jq; \
+        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
