Add max peers for Geth

--- a/geth.yml
+++ b/geth.yml
@@ -73,6 +73,8 @@ services:
       - --authrpc.port
       - ${EE_PORT:-8551}
       - --authrpc.vhosts=*
+      - --maxpeers
+      - ${EL_MAX_PEER_COUNT:-50}
     command: ${GETH_CACHE}
   set-prune-marker:
     profiles: ["tools"]
