--- a/default.env
+++ b/default.env
@@ -49,7 +49,7 @@ DDNS_PROXY=true
 # and in Lodestar it is, sneakily, the target count, not the minimum
 CL_MAX_PEER_COUNT=
 CL_MIN_PEER_COUNT=
-# Ditto for EL, currently only in use for Besu. EL_MIN_PEER_COUNT for Besu is minimum
+# Ditto for EL, currently only in use for Besu and Geth. EL_MIN_PEER_COUNT for Besu is minimum
 # peers before fast sync starts
 EL_MAX_PEER_COUNT=
 EL_MIN_PEER_COUNT=
