--- a/default.env
+++ b/default.env
@@ -49,8 +49,8 @@ DDNS_PROXY=true
 # and in Lodestar it is, sneakily, the target count, not the minimum
 CL_MAX_PEER_COUNT=
 CL_MIN_PEER_COUNT=
-# Ditto for EL, currently only in use for Besu and Geth. EL_MIN_PEER_COUNT for Besu is minimum
-# peers before fast sync starts
+# Maximum active peers for EL. EL_MIN_PEER_COUNT is used for Besu, it's the minimum
+# peer count before fast sync starts
 EL_MAX_PEER_COUNT=
 EL_MIN_PEER_COUNT=
 
