--- a/ee-shared.yml
+++ b/ee-shared.yml
@@ -1,4 +1,4 @@
-# To be used in conjunction with erigon.yml, nm.yml, besu.yml or geth.yml
+# To be used in conjunction with erigon.yml, nethermind.yml, besu.yml or geth.yml
 # For distributed setups only. Please be very cautious when exposing your engine API
 version: "3.4"
 services:
