--- a/el-shared.yml
+++ b/el-shared.yml
@@ -1,4 +1,4 @@
-# To be used in conjunction with erigon.yml, nm.yml, besu.yml or geth.yml
+# To be used in conjunction with erigon.yml, nethermind.yml, besu.yml or geth.yml
 version: "3.4"
 services:
   execution:
