--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -83,28 +83,39 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: livepeerci/curl-jq
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
     user: "10002"
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - TLS="true"
     depends_on:
       - validator
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        set -e
-        token=$$(cat /var/lib/teku/validator/key-manager/validator-api-bearer)
-        result=$$(curl -k -s -H "Accept: application/json" -H "Authorization: Bearer $$token" https://validator:7500/eth/v1/keystores)
-        if ! echo $$result | grep -q "data"; then
-           echo "The key manager API query failed. Output:"
-           echo $$result
-        fi
-        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
-            echo "No keys loaded"
-        else
-          echo "Validator public keys"
-          echo $$result | jq -r '.data[].validating_pubkey'
-        fi
+    entrypoint:
+      - validator-list.sh
+      - /var/lib/teku/validator/key-manager/validator-api-bearer
+      - validator
+  validator-delete:
+    profiles: ["tools"]
+    restart: "no"
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
+    volumes:
+      - teku-data:/var/lib/teku
+      - ./.eth/validator_keys:/validator_keys
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - TLS="true"
+    depends_on:
+      - validator
+    entrypoint:
+      - validator-delete.sh
+      - /var/lib/teku/validator/key-manager/validator-api-bearer
+      - validator
 volumes:
   teku-data:
