--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -120,35 +120,25 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: livepeerci/curl-jq
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
     user: "10000"
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     depends_on:
       - validator
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        set -e
-        token=$$(cat /var/lib/lighthouse/validators/api-token.txt)
-        result=$$(curl -s -H "Accept: application/json" -H "Authorization: Bearer $$token" http://validator:7500/eth/v1/keystores)
-        if ! echo $$result | grep -q "data"; then
-           echo "The key manager API query failed. Output:"
-           echo $$result
-        fi
-        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
-            echo "No keys loaded"
-        else
-          echo "Validator public keys"
-          echo $$result | jq -r '.data[].validating_pubkey'
-        fi
+    entrypoint:
+      - validator-list.sh
+      - /var/lib/lighthouse/validators/api-token.txt
+      - validator
   validator-delete:
     profiles: ["tools"]
     restart: "no"
     build:
-      context: ./dasel-curl-jq
-    image: dasel-curl-jq:local
+      context: ./vc-utils
+    image: vc-utils:local
     user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
