--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -168,29 +168,40 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: livepeerci/curl-jq
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
     user: "10000"
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - LSBUGGED="true"
     depends_on:
       - validator
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        set -e
-        token=$$(cat /var/lib/lodestar/validators/validator-db/api-token.txt)
-        result=$$(curl -s -H "Accept: application/json" -H "Authorization: Bearer $$token" http://validator:7500/eth/v1/keystores)
-        if ! echo $$result | grep -q "data"; then
-           echo "The key manager API query failed. Output:"
-           echo $$result
-        fi
-        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
-            echo "No keys loaded"
-        else
-          echo "Validator public keys"
-          echo $$result | jq -r '.data[].validatingPubkey'
-        fi
+    entrypoint:
+      - validator-list.sh
+      - /var/lib/lodestar/validators/validator-db/api-token.txt
+      - validator
+  validator-delete:
+    profiles: ["tools"]
+    restart: "no"
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
+    volumes:
+      - lsvalidator-data:/var/lib/lodestar/validators
+      - ./.eth/validator_keys:/validator_keys
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - LSBUGGED="true"
+    depends_on:
+      - validator
+    entrypoint:
+      - validator-delete.sh
+      - /var/lib/lodestar/validators/validator-db/api-token.txt
+      - validator
 volumes:
   lsconsensus-data:
   lsvalidator-data:
