--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -119,29 +119,38 @@ services:
   validator-list:
     profiles: ["tools"]
     restart: "no"
-    image: livepeerci/curl-jq
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
     user: "10002"
     volumes:
       - nimbus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
     depends_on:
       - consensus
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        set -e
-        token=$$(cat /var/lib/nimbus/api-token.txt)
-        result=$$(curl -s -H "Accept: application/json" -H "Authorization: Bearer $$token" http://consensus:7500/eth/v1/keystores)
-        if ! echo $$result | grep -q "data"; then
-           echo "The key manager API query failed. Output:"
-           echo $$result
-        fi
-        if [ $$(echo $$result | jq '.data | length') -eq 0 ]; then
-            echo "No keys loaded"
-        else
-          echo "Validator public keys"
-          echo $$result | jq -r '.data[].validating_pubkey'
-        fi
+    entrypoint:
+      - validator-list.sh
+      - /var/lib/nimbus/api-token.txt
+      - consensus
+  validator-delete:
+    profiles: ["tools"]
+    restart: "no"
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
+    volumes:
+      - nimbus-data:/var/lib/nimbus
+      - ./.eth/validator_keys:/validator_keys
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - NIMBUGGED="true"
+    depends_on:
+      - consensus
+    entrypoint:
+      - validator-delete.sh
+      - /var/lib/nimbus/api-token.txt
+      - consensus
 volumes:
   nimbus-data:
   jwtsecret:
