--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -89,26 +89,6 @@ services:
     command:
       - |
         sed -n 2p /var/lib/prysm/auth-token
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    user: prysmvalidator
-    image: prysm-validator:merge
-    volumes:
-      - prysmvalidator-data:/var/lib/prysm
-      - /etc/localtime:/etc/localtime:ro
-    entrypoint:
-      - validator
-      - --datadir
-      - /var/lib/prysm
-      - --verbosity
-      - ${LOG_LEVEL}
-      - accounts
-      - list
-      - --wallet-dir=/var/lib/prysm/
-      - --${NETWORK}
-      # If you chose not to store the wallet password during import, comment out the following line
-      - --wallet-password-file=/var/lib/prysm/password.txt
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -154,5 +134,42 @@ services:
       - --beacon-rpc-provider=${CL_NODE:-http://consensus:4000}
       - --wallet-password-file=/var/lib/prysm/password.txt
       - --${NETWORK}
+  validator-list:
+    profiles: ["tools"]
+    restart: "no"
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: "10000"
+    volumes:
+      - prysmvalidator-data:/var/lib/prysm
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - PRYSM="true"
+    depends_on:
+      - validator
+    entrypoint:
+      - validator-list.sh
+      - /var/lib/prysm/auth-token
+      - validator
+  validator-delete:
+    profiles: ["tools"]
+    restart: "no"
+    build:
+      context: ./vc-utils
+    image: vc-utils:local
+    user: root
+    volumes:
+      - prysmvalidator-data:/var/lib/prysm
+      - ./.eth/validator_keys:/validator_keys
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - PRYSM="true"
+    depends_on:
+      - validator
+    entrypoint:
+      - validator-delete.sh
+      - /var/lib/prysm/auth-token
+      - validator
 volumes:
   prysmvalidator-data:
