Fix Prysm keyimport; move validator list and delete commands

--- a/lighthouse-base.yml
+++ b/lighthouse-base.yml
@@ -70,6 +70,7 @@ services:
       - --validator-monitor-auto
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+
   validator:
     restart: "${RESTART}"
     image: lighthouse:merge
@@ -113,20 +114,7 @@ services:
       - ${FEE_RECIPIENT}
     depends_on:
       - consensus
-  get-keyapi-token:
-    profiles: ["tools"]
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        cat /var/lib/lighthouse/validators/api-token.txt
-        echo
+
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -152,6 +140,7 @@ services:
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+
   validator-exit:
     profiles: ["tools"]
     restart: "no"
@@ -177,23 +166,8 @@ services:
       - --keystore
     depends_on:
       - consensus
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    build:
-      context: ./vc-utils
-    image: vc-utils:local
-    user: "10000"
-    volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - /etc/localtime:/etc/localtime:ro
-    depends_on:
-      - validator
-    entrypoint:
-      - validator-list.sh
-      - /var/lib/lighthouse/validators/api-token.txt
-      - validator
-  validator-delete:
+
+  validator-keys:
     profiles: ["tools"]
     restart: "no"
     build:
@@ -207,9 +181,10 @@ services:
     depends_on:
       - validator
     entrypoint:
-      - validator-delete.sh
+      - keymanager.sh
       - /var/lib/lighthouse/validators/api-token.txt
       - validator
+
 volumes:
   lhbeacon-data:
   lhvalidator-data:
