--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -65,6 +65,7 @@ services:
       - traefik.http.routers.prysm.rule=Host(`${PRYSM_HOST}.${DOMAIN}`)
       - traefik.http.routers.prysm.tls.certresolver=letsencrypt
       - traefik.http.services.prysm.loadbalancer.server.port=${KEY_API_PORT:-7500}
+
   create-wallet:
     profiles: ["tools"]
     restart: "no"
@@ -76,19 +77,7 @@ services:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
     entrypoint: create-wallet.sh
-  get-keyapi-token:
-    profiles: ["tools"]
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - prysmvalidator-data:/var/lib/prysm
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        sed -n 2p /var/lib/prysm/auth-token
+
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -97,6 +86,7 @@ services:
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - ./.eth/validator_keys:/validator_keys
+      - jwtsecret:/var/lib/prysm/ee-secret
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
@@ -114,6 +104,7 @@ services:
       - --wallet-dir=/var/lib/prysm/
       - --keys-dir=/val_keys
       - --${NETWORK}
+
   validator-exit:
     profiles: ["tools"]
     restart: "no"
@@ -134,25 +125,8 @@ services:
       - --beacon-rpc-provider=${CL_NODE:-http://consensus:4000}
       - --wallet-password-file=/var/lib/prysm/password.txt
       - --${NETWORK}
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    build:
-      context: ./vc-utils
-    image: vc-utils:local
-    user: "10000"
-    volumes:
-      - prysmvalidator-data:/var/lib/prysm
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - PRYSM="true"
-    depends_on:
-      - validator
-    entrypoint:
-      - validator-list.sh
-      - /var/lib/prysm/auth-token
-      - validator
-  validator-delete:
+
+  validator-keys:
     profiles: ["tools"]
     restart: "no"
     build:
@@ -168,8 +142,10 @@ services:
     depends_on:
       - validator
     entrypoint:
-      - validator-delete.sh
+      - keymanager.sh
       - /var/lib/prysm/auth-token
       - validator
+
 volumes:
   prysmvalidator-data:
+  jwtsecret:
