--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -64,6 +64,7 @@ services:
       - ${NETWORK}
       - --chain.defaultFeeRecipient
       - ${FEE_RECIPIENT}
+
   validator:
     restart: "${RESTART}"
     image: lodestar:merge
@@ -101,20 +102,7 @@ services:
       - ${NETWORK}
       - --defaultFeeRecipient
       - ${FEE_RECIPIENT}
-  get-keyapi-token:
-    profiles: ["tools"]
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - lsvalidator-data:/var/lib/lodestar/validators
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        cat /var/lib/lodestar/validators/validator-db/api-token.txt
-        echo
+
   validator-import:
     profiles: ["tools"]
     restart: "${RESTART}"
@@ -143,6 +131,7 @@ services:
       - ${NETWORK}
     depends_on:
       - consensus
+
   validator-exit:
     profiles: ["tools"]
     restart: "no"
@@ -165,25 +154,8 @@ services:
       - ${LOG_LEVEL}
       - --network
       - ${NETWORK}
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    build:
-      context: ./vc-utils
-    image: vc-utils:local
-    user: "10000"
-    volumes:
-      - lsvalidator-data:/var/lib/lodestar/validators
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - LSBUGGED="true"
-    depends_on:
-      - validator
-    entrypoint:
-      - validator-list.sh
-      - /var/lib/lodestar/validators/validator-db/api-token.txt
-      - validator
-  validator-delete:
+
+  validator-keys:
     profiles: ["tools"]
     restart: "no"
     build:
@@ -199,9 +171,10 @@ services:
     depends_on:
       - validator
     entrypoint:
-      - validator-delete.sh
+      - keymanager.sh
       - /var/lib/lodestar/validators/validator-db/api-token.txt
       - validator
+
 volumes:
   lsconsensus-data:
   lsvalidator-data:
