--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -71,6 +71,7 @@ services:
       - "8008"
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+
   validator:
     restart: "${RESTART}"
     build:
@@ -125,6 +126,7 @@ services:
       - traefik.http.routers.prysm.rule=Host(`${PRYSM_HOST}.${DOMAIN}`)
       - traefik.http.routers.prysm.tls.certresolver=letsencrypt
       - traefik.http.services.prysm.loadbalancer.server.port=${KEY_API_PORT:-7500}
+
   create-wallet:
     profiles: ["tools"]
     restart: "no"
@@ -136,19 +138,7 @@ services:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
     entrypoint: create-wallet.sh
-  get-keyapi-token:
-    profiles: ["tools"]
-    restart: "no"
-    image: alpine:latest
-    user: "10000"
-    volumes:
-      - prysmvalidator-data:/var/lib/prysm
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        sed -n 2p /var/lib/prysm/auth-token
+
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -156,6 +146,7 @@ services:
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
+      - jwtsecret:/var/lib/prysm/ee-secret
       - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
@@ -174,6 +165,7 @@ services:
       - --wallet-dir=/var/lib/prysm/
       - --keys-dir=/val_keys
       - --${NETWORK}
+
   validator-exit:
     profiles: ["tools"]
     restart: "no"
@@ -196,25 +188,8 @@ services:
       - --${NETWORK}
     depends_on:
       - consensus
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    build:
-      context: ./vc-utils
-    image: vc-utils:local
-    user: "10000"
-    volumes:
-      - prysmvalidator-data:/var/lib/prysm
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - PRYSM="true"
-    depends_on:
-      - validator
-    entrypoint:
-      - validator-list.sh
-      - /var/lib/prysm/auth-token
-      - validator
-  validator-delete:
+
+  validator-keys:
     profiles: ["tools"]
     restart: "no"
     build:
@@ -230,9 +205,10 @@ services:
     depends_on:
       - validator
     entrypoint:
-      - validator-delete.sh
+      - keymanager.sh
       - /var/lib/prysm/auth-token
       - validator
+
 volumes:
   prysmbeacon-data:
   prysmvalidator-data:
