--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -41,20 +41,7 @@ services:
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
-  get-keyapi-token:
-    profiles: ["tools"]
-    restart: "no"
-    image: alpine:latest
-    user: "10002"
-    volumes:
-      - teku-data:/var/lib/teku
-      - /etc/localtime:/etc/localtime:ro
-    <<: *logging
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        cat /var/lib/teku/validator/key-manager/validator-api-bearer
-        echo
+
   validator-import:
     profiles: ["tools"]
     restart: "no"
@@ -67,6 +54,7 @@ services:
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     entrypoint: validator-import.sh
+
   validator-exit:
     profiles: ["tools"]
     restart: "no"
@@ -80,25 +68,8 @@ services:
       - voluntary-exit
       - --beacon-node-api-endpoint=${CL_NODE:-http://consensus:5052}
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
-  validator-list:
-    profiles: ["tools"]
-    restart: "no"
-    build:
-      context: ./vc-utils
-    image: vc-utils:local
-    user: "10002"
-    volumes:
-      - teku-data:/var/lib/teku
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - TLS="true"
-    depends_on:
-      - validator
-    entrypoint:
-      - validator-list.sh
-      - /var/lib/teku/validator/key-manager/validator-api-bearer
-      - validator
-  validator-delete:
+
+  validator-keys:
     profiles: ["tools"]
     restart: "no"
     build:
@@ -114,8 +85,9 @@ services:
     depends_on:
       - validator
     entrypoint:
-      - validator-delete.sh
+      - keymanager.sh
       - /var/lib/teku/validator/key-manager/validator-api-bearer
       - validator
+
 volumes:
   teku-data:
