--- a/vc-utils/Dockerfile
+++ b/vc-utils/Dockerfile
@@ -1,4 +1,3 @@
 FROM livepeerci/curl-jq
 
-COPY ./validator-delete.sh /usr/local/bin/
-COPY ./validator-list.sh /usr/local/bin/
+COPY ./keymanager.sh /usr/local/bin/
