--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -23,7 +23,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   ca-certificates \
   tzdata \
   gosu \
-  libjemalloc2 \
+  libjemalloc-dev \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
