--- a/teku-base.yml
+++ b/teku-base.yml
@@ -109,6 +109,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - TLS="true"
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     depends_on:
       - consensus
     entrypoint:
