--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -168,6 +168,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - LSBUGGED="true"
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     depends_on:
       - validator
     entrypoint:
