--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -107,6 +107,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - LSBUGGED="true"
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     depends_on:
       - validator
     entrypoint:
