--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -119,6 +119,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - NIMBUGGED="true"
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     depends_on:
       - consensus
     entrypoint:
