--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -201,6 +201,7 @@ services:
       - ./.eth/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - PRYSM="true"
     depends_on:
       - validator
