--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -82,6 +82,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - TLS="true"
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     depends_on:
       - validator
     entrypoint:
