--- a/default.env
+++ b/default.env
@@ -55,6 +55,9 @@ EL_MIN_PEER_COUNT=
 BEACON_STATS_API=
 BEACON_STATS_MACHINE=
 
+# IP of the host you want to use in Docker (in case host has several IPs)
+HOST_IP=
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EL_P2P_PORT=30303
