--- a/el-shared.yml
+++ b/el-shared.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   execution:
     ports:
-      - ${EL_RPC_PORT}:${EL_RPC_PORT:-8545}/tcp
-      - ${EL_WS_PORT}:${EL_WS_PORT:-8546}/tcp
+      - ${HOST_IP}:${EL_RPC_PORT}:${EL_RPC_PORT:-8545}/tcp
+      - ${HOST_IP}:${EL_WS_PORT}:${EL_WS_PORT:-8546}/tcp
   eth:
     image: tianon/true
