--- a/grafana-shared.yml
+++ b/grafana-shared.yml
@@ -2,7 +2,7 @@ version: "3.4"
 services:
   grafana:
     ports:
-      - ${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
+      - ${HOST_IP}:${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
 #  prometheus:
 #    ports:
 #      - 9090:9090/tcp
