--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     image: lodestar:merge
     user: lsvalidator
     environment:
@@ -46,7 +46,7 @@ services:
 
   validator-import:
     profiles: ["tools"]
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     image: lodestar:merge
     user: root
     volumes:
@@ -108,6 +108,7 @@ services:
     environment:
       - LSBUGGED="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - validator
     entrypoint:
