--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -8,7 +8,7 @@ x-logging: &logging
 
 services:
   mev-boost:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./flashbots
       dockerfile: ${MEV_DOCKERFILE}
