--- a/besu.yml
+++ b/besu.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   execution:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     stop_grace_period: 3m
     build:
       context: ./besu
