--- a/blox-ssv.yml
+++ b/blox-ssv.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   ssv-node:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
     user: 12000:12000
     volumes:
