--- a/erigon.yml
+++ b/erigon.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   execution:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./erigon
       dockerfile: ${ERIGON_DOCKERFILE}
