--- a/lighthouse-base.yml
+++ b/lighthouse-base.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lighthouse
       dockerfile: ${LH_DOCKERFILE}
@@ -72,7 +72,7 @@ services:
       - ${FEE_RECIPIENT}
 
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     image: lighthouse:merge
     user: lhvalidator
     environment:
@@ -180,6 +180,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - validator
     entrypoint:
