--- a/lighthouse-cl-only.yml
+++ b/lighthouse-cl-only.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lighthouse
       dockerfile: ${LH_DOCKERFILE}
