--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lighthouse
       dockerfile: ${LH_DOCKERFILE}
@@ -119,6 +119,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - validator
     entrypoint:
