--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./lodestar
       dockerfile: ${LS_DOCKERFILE}
