--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./nimbus
       args:
@@ -120,6 +120,7 @@ services:
     environment:
       - NIMBUGGED="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - consensus
     entrypoint:
