--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -16,7 +16,7 @@ x-build: &prysm-build
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       target: consensus
       <<: *prysm-build
@@ -73,7 +73,7 @@ services:
       - ${FEE_RECIPIENT}
 
   validator:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       target: validator
       <<: *prysm-build
@@ -202,6 +202,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
       - PRYSM="true"
     depends_on:
       - validator
