--- a/teku-base.yml
+++ b/teku-base.yml
@@ -9,7 +9,7 @@ x-logging: &logging
 
 services:
   consensus:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./teku
       args:
@@ -110,6 +110,7 @@ services:
     environment:
       - TLS="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEY_API_PORT=${KEY_API_PORT:-7500}
     depends_on:
       - consensus
     entrypoint:
