Do not comment out EL_*_PORT

--- a/default.env
+++ b/default.env
@@ -75,10 +75,10 @@ TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
 # NOTE: If you configure EL_RPC_PORT or EL_WS_PORT then you should also add el-shared.yml to COMPOSE_FILE
 # Execution client RPC port, important when using ec-shared.yml. Insecure, do not expose to Internet.
-#EL_RPC_PORT=8545
+EL_RPC_PORT=8545
 # Execution client WS port. Insecure, do not expose to Internet.
 # Note that for Erigon, this needs to match EL_RPC_PORT
-#EL_WS_PORT=8546
+EL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, that'll fail
 ERIGON_TORRENT_PORT=42069
 # SSV Node ports
