Default Nimbus to source build

--- a/default.env
+++ b/default.env
@@ -126,7 +126,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET=unstable
 NIM_DOCKER_TAG=multiarch-latest
-NIM_DOCKERFILE=Dockerfile.binary
+NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
 # SRC build target can be a tag or a branch
