--- a/besu.yml
+++ b/besu.yml
@@ -25,8 +25,8 @@ services:
       - besu-eth1-data:/var/lib/besu
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${HOST_IP}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
-      - ${HOST_IP}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
+      - ${HOST_IP:-0.0.0.0}:${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
     networks:
       default:
         aliases:
