--- a/blox-ssv.yml
+++ b/blox-ssv.yml
@@ -17,8 +17,8 @@ services:
       - ssv-data:/tmp
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${HOST_IP}:${SSV_P2P_PORT}:${SSV_P2P_PORT}/tcp
-      - ${HOST_IP}:${SSV_P2P_PORT_UDP}:${SSV_P2P_PORT_UDP}/udp
+      - ${HOST_IP:-0.0.0.0}:${SSV_P2P_PORT}:${SSV_P2P_PORT}/tcp
+      - ${HOST_IP:-0.0.0.0}:${SSV_P2P_PORT_UDP}:${SSV_P2P_PORT_UDP}/udp
     <<: *logging
     environment:
       - CONFIG_PATH=/config.yaml
