--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -1,6 +1,6 @@
 ARG DOCKER_TAG
 
-FROM sigp/lighthouse:${DOCKER_TAG}
+FROM gnosischain/lighthouse-beacon:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
