--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -2,7 +2,7 @@ ARG DOCKER_TAG
 
 FROM ghcr.io/tomwright/dasel:latest as dasel
 
-FROM nethermind/nethermind:${DOCKER_TAG}
+FROM gnosischain/nethermind:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
