Add Lodestar support

--- a/lighthouse-base.yml
+++ b/lighthouse-base.yml
@@ -139,8 +139,8 @@ services:
       - /var/lib/lighthouse
       - --directory
       - /val_keys
-      - --network
-      - ${NETWORK}
+      - --testnet-dir
+      - /usr/testnet_data
       - --debug-level=${LOG_LEVEL}
 
   validator-exit:
@@ -162,8 +162,8 @@ services:
       - http://consensus:5052
       - --datadir
       - /var/lib/lighthouse
-      - --network
-      - ${NETWORK}
+      - --testnet-dir
+      - /usr/testnet_data
       - --debug-level=${LOG_LEVEL}
       - --keystore
     depends_on:
