--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-base.yml:besu.yml:deposit-cli.yml
+COMPOSE_FILE=lighthouse-base.yml:nethermind.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
 # Override TTD - may be required during testnet launch.
@@ -149,7 +149,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-LS_DOCKER_TAG=latest
+LS_DOCKER_TAG=latest-chiado
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
