--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -39,8 +39,8 @@ services:
       - ${GRAFFITI}
       - --logLevel
       - ${LOG_LEVEL}
-      - --network
-      - ${NETWORK}
+      - --preset=gnosis
+      - --paramsFile=/usr/config.yaml
       - --defaultFeeRecipient
       - ${FEE_RECIPIENT}
 
@@ -68,8 +68,8 @@ services:
       - /var/lib/lodestar/validators
       - --directory
       - /val_keys
-      - --network
-      - ${NETWORK}
+      - --preset=gnosis
+      - --paramsFile=/usr/config.yaml
 
   validator-exit:
     profiles: ["tools"]
@@ -91,8 +91,8 @@ services:
       - ${CL_NODE:-http://consensus:5052}
       -  --logLevel
       - ${LOG_LEVEL}
-      - --network
-      - ${NETWORK}
+      - --preset=gnosis
+      - --paramsFile=/usr/config.yaml
 
   validator-keys:
     profiles: ["tools"]
