--- a/default.env
+++ b/default.env
@@ -131,7 +131,7 @@ NIM_DOCKERFILE=Dockerfile.source
 # Teku
 # SRC build target can be a tag or a branch
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-TEKU_DOCKER_TAG=latest
+TEKU_DOCKER_TAG=latest-chiado
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
