--- a/default.env
+++ b/default.env
@@ -143,7 +143,7 @@ LH_DOCKERFILE=Dockerfile.binary
 # Prysm
 # SRC build target can be a tag or a branch
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=stable
+PRYSM_DOCKER_TAG=latest-chiado
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
