--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -20,7 +20,7 @@ services:
     build:
       target: validator
       <<: *prysm-build
-    image: prysm-validator:merge
+    image: prysm-validator:chiado
     user: prysmvalidator
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -69,7 +69,7 @@ services:
   create-wallet:
     profiles: ["tools"]
     restart: "no"
-    image: prysm-validator:merge
+    image: prysm-validator:chiado
     user: prysmvalidator
     environment:
       - NETWORK=${NETWORK}
@@ -81,7 +81,7 @@ services:
   validator-import:
     profiles: ["tools"]
     restart: "no"
-    image: prysm-validator:merge
+    image: prysm-validator:chiado
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -109,7 +109,7 @@ services:
     profiles: ["tools"]
     restart: "no"
     user: prysmvalidator
-    image: prysm-validator:merge
+    image: prysm-validator:chiado
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
